- sitemap: fix border bug when switching between horizontal and vertical layouts

--- a/themes/starterkit/css/layouts/sitemap/sitemap.layout.css
+++ b/themes/starterkit/css/layouts/sitemap/sitemap.layout.css
@@ -347,7 +347,8 @@ html {
         html body .sitemap .menu-block-wrapper ul.menu > li a {
           margin-top: -20px; }
       html body .sitemap .menu-block-wrapper > ul.menu {
-        padding: 0; }
+        padding: 0;
+        border-left: none; }
         html body .sitemap .menu-block-wrapper > ul.menu > li {
           float: left; }
           html body .sitemap .menu-block-wrapper > ul.menu > li.width-1 {
