--- a/themes/starterkit/sass/layouts/sitemap/sitemap.layout.scss
+++ b/themes/starterkit/sass/layouts/sitemap/sitemap.layout.scss
@@ -142,6 +142,7 @@ html{
 				}
 				> ul.menu{
 					padding: 0;
+					border-left: none;
 					> li{ 
 						float: left;
 						&.width-1{ width: 100%; }
