updated set of files to be more generic to a typical site

--- a/themes/starterkit/sass/layouts/peeler/peeler.layout.scss
+++ b/themes/starterkit/sass/layouts/peeler/peeler.layout.scss
@@ -36,10 +36,7 @@ footer{
 	z-index: 1000;
   height:0;
 }
-.l-region {
-	position: relative;
-	top: -85px;
-}
+.l-region {}
 div#content-region1{  
   background-color: $dkgray;
 }
