--- a/themes/starterkit/css/layouts/default_inner/default_inner.layout.css
+++ b/themes/starterkit/css/layouts/default_inner/default_inner.layout.css
@@ -14,18 +14,16 @@ html body .l-page {
       clear: none; }
       @media (min-width: 45em) {
         html body .l-page .l-header .l-header-first {
-          width: 50%;
+          width: 100%;
           clear: right;
-          float: left;
-          margin-left: 0;
-          margin-right: 0%; } }
+          float: right;
+          margin-right: 0; } }
       @media (min-width: 70em) {
         html body .l-page .l-header .l-header-first {
-          width: 50%;
+          width: 100%;
           clear: right;
-          float: left;
-          margin-left: 0;
-          margin-right: 0%; } }
+          float: right;
+          margin-right: 0; } }
     html body .l-page .l-header .l-header-second {
       width: 100%;
       float: right;
@@ -34,18 +32,16 @@ html body .l-page {
       clear: none; }
       @media (min-width: 45em) {
         html body .l-page .l-header .l-header-second {
-          width: 50%;
+          width: 100%;
           clear: right;
-          float: left;
-          margin-left: 0;
-          margin-right: 0%; } }
+          float: right;
+          margin-right: 0; } }
       @media (min-width: 70em) {
         html body .l-page .l-header .l-header-second {
-          width: 50%;
+          width: 100%;
           clear: right;
-          float: left;
-          margin-left: 0;
-          margin-right: 0%; } }
+          float: right;
+          margin-right: 0; } }
     html body .l-page .l-header .l-header-third {
       width: 100%;
       float: right;
