--- a/themes/starterkit/css/layouts/default_inner/default_inner.layout.no-query.css
+++ b/themes/starterkit/css/layouts/default_inner/default_inner.layout.no-query.css
@@ -12,32 +12,28 @@ html body .l-page {
       margin-left: 0;
       margin-right: 0;
       clear: none;
-      width: 50%;
+      width: 100%;
       clear: right;
-      float: left;
-      margin-left: 0;
-      margin-right: 0%;
-      width: 50%;
+      float: right;
+      margin-right: 0;
+      width: 100%;
       clear: right;
-      float: left;
-      margin-left: 0;
-      margin-right: 0%; }
+      float: right;
+      margin-right: 0; }
     html body .l-page .l-header .l-header-second {
       width: 100%;
       float: right;
       margin-left: 0;
       margin-right: 0;
       clear: none;
-      width: 50%;
+      width: 100%;
       clear: right;
-      float: left;
-      margin-left: 0;
-      margin-right: 0%;
-      width: 50%;
+      float: right;
+      margin-right: 0;
+      width: 100%;
       clear: right;
-      float: left;
-      margin-left: 0;
-      margin-right: 0%; }
+      float: right;
+      margin-right: 0; }
     html body .l-page .l-header .l-header-third {
       width: 100%;
       float: right;
