tweak to external link button

--- a/themes/starterkit/sass/starterkit.styles.scss
+++ b/themes/starterkit/sass/starterkit.styles.scss
@@ -145,7 +145,7 @@ body.front{
 		}
 	}
 }
-#block-bean-test-button-promo-1{
+.block--bean-test-button-promo-1{
 	.field__item{
 		a{
 			display: block;
