--- a/themes/starterkit/css/starterkit.no-query.css
+++ b/themes/starterkit/css/starterkit.no-query.css
@@ -101,7 +101,7 @@ body.page-node-73 .l-region .block.block--bean .block__title,
 body.front .l-region .block.block--bean .block__title {
   display: none; }
 
-#block-bean-test-button-promo-1 .field__item a {
+.block--bean-test-button-promo-1 .field__item a {
   display: block;
   float: left;
   width: 100%;
