--- a/themes/starterkit/css/starterkit.no-query.css
+++ b/themes/starterkit/css/starterkit.no-query.css
@@ -26,6 +26,8 @@ body.developer .l-region--content-right {
   border-radius: 5px;
   border: 1px solid #444444;
   margin-bottom: 10px; }
+body.developer #block-user-login {
+  display: block; }
 
 .l-header,
 .l-header .l-region,
@@ -515,7 +517,7 @@ img {
     padding: 5px; }
 
 #block-user-login {
-  display: block;
+  display: none;
   width: auto;
   position: absolute;
   right: 10px;
@@ -753,6 +755,13 @@ html {
     margin: 0 auto; }
     html body .l-page {
       overflow: hidden; }
+
+#block-bean-footer-address,
+#block-bean-footer-social {
+  display: block;
+  float: left;
+  width: 100%;
+  width: 50%; }
 
 .print-buttons {
   position: fixed;
