--- a/themes/unc_charlotte4/sass/variables/_colors.scss
+++ b/themes/unc_charlotte4/sass/variables/_colors.scss
@@ -4,6 +4,7 @@ $gray:#898989;
 $dkgray:#444;
 $shadow:rgba(0,0,0,0.4);
 $dkgreen:#00572D;
+$dkgreen-transparent:rgba(0, 87, 45, 0.85);
 
 /* colors taken from UNC Charlotte branding standards */
 $lgreen:#C3D7A4;
