--- a/themes/unc_charlotte4/css/layouts/sitemap/sitemap.layout.no-query.css
+++ b/themes/unc_charlotte4/css/layouts/sitemap/sitemap.layout.no-query.css
@@ -1,7 +1,7 @@
 /* colors taken from UNC Charlotte branding standards */
 /* breakpoints */
 /* max width of site column */
-/* height and width restrictions of billboard image */
+/* height and width restrictions of billboard image, set to initial for no restriction */
 html {
   background: #eee;
   margin-bottom: 20px; }
