--- a/themes/unc_charlotte4/css/unc_charlotte4.normalize.css
+++ b/themes/unc_charlotte4/css/unc_charlotte4.normalize.css
@@ -1,7 +1,7 @@
 /* colors taken from UNC Charlotte branding standards */
 /* breakpoints */
 /* max width of site column */
-/* height and width restrictions of billboard image */
+/* height and width restrictions of billboard image, set to initial for no restriction */
 /*! normalize.css v3.0.0 | MIT License | git.io/normalize */
 /*! normalize.css v3.0.0 | HTML5 Display Definitions | MIT License | git.io/normalize */
 article,
